# google-cloudevents-python

./: .gitignore  .repo-metadata.json  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  gen.py  gen.sh  generator.py  generator.sh  noxfile.py  owlbot.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  synth.metadata  synth.py
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  release-please.yml
.github/workflows/: fallback_generation.yaml  generate.yaml  test_generation.yaml
.kokoro/: build.sh  release.sh  requirements.txt  test-samples-against-head.sh  test-samples.sh
.kokoro/continuous/: common.cfg
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
.kokoro/samples/lint/: common.cfg
.kokoro/samples/python3.10/: common.cfg
.kokoro/samples/python3.11/: common.cfg  periodic-head.cfg
docs/: conf.py
examples/: main.py  requirements.txt
experiments/: pubsub.py
scripts/: README.md  generate-from-proto.py  generate-from-proto.sh  requirements.txt
templates/: README.template  init_py.template  setup_py.template
tests/: test_cloud_audit_v1.py  test_cloud_cloudbuild_v1.py  test_cloud_firestore_v1.py  test_cloud_pubsub_v1.py  test_cloud_scheduler_v1.py  test_cloud_storage_v1.py  test_cloudevents_data_parsing.py  test_firebase_analytics_v1.py  test_firebase_auth_v1.py  test_firebase_database_v1.py  test_firebase_firebasealerts_v1.py  test_firebase_remoteconfig_v1.py  util.py
tests/data/: cloud_storage_v1_storageobjectdata_simple.json
(+368 files in other folders)
