[metadata]
name = google-events
version = 0.14.0
author = Google LLC
author_email = googleapis-packages@google.com
description = Google Cloudevents library
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/googleapis/google-cloudevents-python/

license = Apache License 2.0
platforms = Posix, MacOS X, Windows
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Internet

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
install_requires =
    proto-plus >= 1.22.0
    protobuf >= 4.21.5

[options.packages.find]
where=src
